--- a/ClaseAdministradora/pom.xml
+++ b/ClaseAdministradora/pom.xml
@@ -10,9 +10,11 @@
 <name>ClaseAdministradora</name>
 <packaging>jar</packaging>
 <description>
-    SOR Tarea 7: .
+    SOR Homework 8: Object admin class.
+    Objective: Abstract related information management within a class that hides the information.
+    Description: Implement a Matter object manager class with its ABC operations.
 </description>
-<url>https:</url>
+<url>https://github.com/Arevalo-Edgar14/SOR/tree/main/${name}</url>
 <licenses>
     <license>
         <name>Apache License</name>
